src/styles/markdown.css
/* https://github.com/antfu/prism-theme-vars */
@import 'prism-theme-vars/base.css';

:root {
  --prism-font-size: 0.9rem;
  --prism-font-family: 'Fira Code', monospace;
}

:root {
  --prism-font-family: 'Input Mono', monospace;
}

html:not(.dark) {
  --prism-foreground: #E8A0BF;
  --prism-background: #fbfbfb;
  --prism-comment: #a0ada0;
  --prism-string: #b56959;
  --prism-literal: #2f8a89;
  --prism-number: #296aa3;
  --prism-keyword: #1c6b48;
  --prism-function: #6c7834;
  --prism-boolean: #1c6b48;
  --prism-constant: #a65e2b;
  --prism-deleted: #a14f55;
  --prism-class: #2993a3;
  --prism-builtin: #ab5959;
  --prism-property: #b58451;
  --prism-namespace: #b05a78;
  --prism-punctuation: #8e8f8b;
  --prism-decorator: #bd8f8f;
  --prism-regex: #ab5e3f;
  --prism-json-property: #698c96;
}

html.dark {
  --prism-foreground: #d4cfbf;
  --prism-background: #111111;
  --prism-comment: #758575;
  --prism-string: #d48372;
  --prism-literal: #429988;
  --prism-keyword: #4d9375;
  --prism-boolean: #1c6b48;
  --prism-number: #6394bf;
  --prism-variable: #c2b36e;
  --prism-function: #a1b567;
  --prism-deleted: #a14f55;
  --prism-class: #54b1bf;
  --prism-builtin: #e0a569;
  --prism-property: #dd8e6e;
  --prism-namespace: #db889a;
  --prism-punctuation: #858585;
  --prism-decorator: #bd8f8f;
  --prism-regex: #ab5e3f;
  --prism-json-property: #6b8b9e;
  --prism-line-number: #888888;
  --prism-line-number-gutter: #eeeeee;
  --prism-line-highlight-background: #444444;
  --prism-selection-background: #444444;
}

.prose {
  --fg: #555;
  --fg-deep: #222;
  --fg-deeper: #000;

  color: var(--fg);
}

.prose a {
  font-weight: inherit;
  text-decoration: none;
  border-bottom: 1px solid rgba(125, 125, 125, 0.3);
  transition: border 0.3s ease-in-out;
}

.prose a:hover {
  border-bottom: 1px solid var(--fg);
}

.prose a code {
  color: inherit;
}

.prose hr {
  width: 50px;
  margin: 2em auto;
}

html.dark .prose {
  --fg: #aaa;
  --fg-deep: #bbb;
  --fg-deeper: #ccc;
}

a.item {
  transition: 0.2s all ease-out;
  text-decoration: none;
  border-bottom: none !important;
  opacity: 0.6;
}

a.item:hover {
  opacity: 1;
}

a.header-anchor {
  float: left;
  margin-top: 0.125em;
  margin-left: -1.2em;
  padding-right: 0.5em;
  font-size: 0.85em;
  opacity: 0;
  text-decoration: none;
  border: 0 !important;
}

a.header-anchor:hover,
a.header-anchor:focus {
  text-decoration: none;
}

h1:hover .header-anchor,
h1:focus .header-anchor,
h2:hover .header-anchor,
h2:focus .header-anchor,
h3:hover .header-anchor,
h3:focus .header-anchor,
h4:hover .header-anchor,
h4:focus .header-anchor,
h5:hover .header-anchor,
h5:focus .header-anchor,
h6:hover .header-anchor,
h6:focus .header-anchor {
  opacity: 0.5;
}

.prose blockquote {
  font-weight: normal;
  font-style: normal;
  line-height: 1.5em;
  padding: 0.6em 1.2em;
  opacity: 0.8;
}

.prose blockquote > :first-child {
  margin-top: 0;
}

.prose blockquote > :last-child {
  margin-bottom: 0;
}

.prose blockquote p:first-of-type::before {
  content: none;
}

.prose blockquote p:first-of-type::after {
  content: none;
}

@media (max-width: 1200px) {
  .table-of-contents {
    display: none;
  }
}

.table-of-contents {
  position: fixed;
  top: 80px;
  padding-top: 70px;
  font-size: 0.8em;
  right: 16px;
  width: 200px;
  bottom: 0;
  overflow-y: auto;
  overflow-x: hidden;
  text-overflow: ellipsis;
  /* opacity: 0; */
  opacity: 0.5;
  /* transition: all .4s ease-out; */
}

/* .table-of-contents:hover { */
  /* opacity: 0.5; */
/* } */

/* make the first child of table-of-contents on the far left
   because toc only has one root child
*/
.table-of-contents > :first-child {
  padding-left: 0 !important;
}

.table-of-contents ul > li::before {
  display: none;
}

.prose img {
  max-width: 100%;
}

